# AgnoSpeech-deployed

./: .gitignore  .vercelignore  README.md  helpline_reports_2019-2025.csv  pyproject.toml  run.py
_lib/agnospeech/: __init__.py  cli.py  conformance.py  facade.py  harness.py  scorecard.py
_lib/agnospeech/attacks/: __init__.py  authorship.py  base.py  pii_recall.py
_lib/agnospeech/datasets/: __init__.py  base.py  reddit.py
_lib/agnospeech/detect/: __init__.py  hsd.py
_lib/agnospeech/harmcheck/: __init__.py  check.py
_lib/agnospeech/holistic/: __init__.py  engine.py  placeholders.py
_lib/agnospeech/metrics/: __init__.py  bootstrap.py  curve.py  privacy.py  quality.py  to_score.py  utility.py
_lib/agnospeech/privatize/: __init__.py  base.py  l1_redact.py  l2_rationale.py  l3_dp_rewrite.py  patterns.py
_lib/agnospeech/repro/: __init__.py  determinism.py  revisions.py
agnospeech_workbench/: __init__.py  api_logic.py  corpus.py  pipeline.py  server.py
web/: app.js  index.html  style.css
